# Sentient-Intelligence-Network

./: .gitignore  README.md  __init__.py  cli.py  contracts.py  dream_baseline.py  package.json  public_shell.ts  pyproject.toml  reasoncore_lite.ts  requirements.txt  tsconfig.json
SINlite/: defaults.py
SINlite/contracts/: construct_state.v1_2.schema.json  reasoncore_lite.v1.json  whisper_pattern.v1_3.schema.json
SINlite/core/: qdss_core.py  ritual.py  sealed_input.py  soft_bloom_export.py  whisper_patterns.py
SINlite/core/contracts/: __init__.py  perception.py
SINlite/plugins/: hooks_audio.py
SINlite/seals/: heartcore.js  hqhe_bindings.py
core/: bloom.py  qdss_core.py  sinlite_kernel.py  soft_bloom_export.py  vertical_wave_contract.py  whisper_patterns.py
core/sparsity/: policy.ts  sparse_utils.ts
examples/: README.md  basic_kernel_step.py  sealed_payload_demo.py  soft_bloom_projection.py  stateful_loop.py
fixtures/s1_demo/: audio_reference.json  kernel_inputs.json  micro_inputs.json  narrative_hint.json  whisper_patterns.json
io/: sinlite_interface.md
plugins/: api.ts  hooks_color.py
tests/: reasoncore_lite.spec.ts  reasoncore_lite_sparse_guard.spec.ts  test_bloom_soft_math.py  test_cli_integration.py  test_construct_state_io.py  test_contract_roundtrip.py  test_dream_baseline.py  test_qdss_dream_bridge.py  test_qdss_history_limit.py  test_qdss_whisper_runtime.py  test_ritual_silence.py  test_sealed_input_roundtrip.py  test_soft_bloom_export.py  test_vertical_wave_contract.py  test_whisper_bindings_schema.py  test_whisper_rate_limits.py
(+3 files in other folders)
